--- a/site.css
+++ b/site.css
@@ -1,12 +1,19 @@
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 main {
     background-color: rgb(196, 200, 203);
     padding: 4px;
     color: #202020;
+    grid-area: main
+}
+
+aside {
+    grid-area: aside;
 }
 
 h1, h2 {
     color: darkblue;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 img {
@@ -18,7 +25,7 @@ img {
     border: 1px solid #808080;
     margin: 8px;
     border-radius: 8px;
-    max-width: 150px;
+    max-width: 50px;
 }
 
 .experience {
@@ -31,5 +38,62 @@ img {
 
 .experience .title {
     font-weight: bold;
+}
+
+footer {
+    background-color: #202020;
+    color: lightblue;
+    text-align: center;
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    grid-area: footer
+}
+
+#menu li{
+    display: inline;
+    padding: 8px;
+    background-color: rgb(42, 40, 40);
+
+}
+
+#menu li a {
+    color: white !important;
+    text-decoration: none;
+}
+
+#menu li.active{
+    background-color: darkslateblue;
+}
+
+#menu {
+    float: right;
+}
+
+header {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    grid-area: header;
+}
+
+header #menu {
+    margin-left: auto;
+}
+
+/* header #headshot, header #siteName, header #menu{
+  display: inline;
+  vertical-align: middle; 
+} */
+
+.container {
+    display: grid;
+    grid-template-areas: 
+        "header header"
+        "main aside"
+        "footer footer";
+    grid-template-columns: auto 200px;
+    grid-gap: 8px;
 }
 
